--- a/Labs/Lab1/Comp_2139/Comp_2139/Comp_2139.csproj
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Comp_2139.csproj
@@ -21,9 +21,23 @@
   <ItemGroup>
     <None Remove="Data\" />
     <None Remove="Areas\" />
+    <None Remove="Views\Shared\DisplayTemplates\" />
+    <None Remove="Areas\ProjectManagement \Views\Shared\" />
+    <None Remove="Areas\ProjectManagement \Views\Shared\DisplayTemplates\" />
+    <None Remove="Areas\ProjectManagement \Components\" />
+    <None Remove="Areas\ProjectManagement \Components\ProjectSummary\" />
+    <None Remove="Views\Shared\Components\" />
+    <None Remove="Views\Shared\Components\ProjectSummary\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Areas\" />
+    <Folder Include="Views\Shared\DisplayTemplates\" />
+    <Folder Include="Areas\ProjectManagement \Views\Shared\" />
+    <Folder Include="Areas\ProjectManagement \Views\Shared\DisplayTemplates\" />
+    <Folder Include="Areas\ProjectManagement \Components\" />
+    <Folder Include="Areas\ProjectManagement \Components\ProjectSummary\" />
+    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Views\Shared\Components\ProjectSummary\" />
   </ItemGroup>
 </Project>
