--- a/Labs/Lab1/Comp_2139/Comp_2139/Comp_2139.csproj
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Comp_2139.csproj
@@ -32,6 +32,9 @@
     <None Remove="Views\Shared\Components\" />
     <None Remove="Views\Shared\Components\ProjectSummary\" />
     <None Remove="Services\" />
+    <None Remove="Models\ViewModels\" />
+    <None Remove="Views\RoleManager\" />
+    <None Remove="Enum\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -44,5 +47,8 @@
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\ProjectSummary\" />
     <Folder Include="Services\" />
+    <Folder Include="Models\ViewModels\" />
+    <Folder Include="Views\RoleManager\" />
+    <Folder Include="Enum\" />
   </ItemGroup>
 </Project>
